# docket

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  TODO.md  docker-compose.yml
migrations/: 001_init.sql  002_add_todo_position.sql
src/: config.rs  main.rs
src/core/: db.rs  mod.rs  models.rs  service.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs  views.rs
src/web/: api.rs  mod.rs  server.rs
static/: index.html
