[package]
name = "docket"
version = "0.1.0"
edition = "2024"
authors = ["Brad Penney"]
description = "Project-based todo manager with TUI and web interfaces"
license = "MIT"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Configuration
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
